--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "http-status-codes": "^2.3.0",
+    "nodemailer": "^7.0.13",
     "pg": "^8.17.2",
     "slugify": "^1.6.6",
     "tsup": "^8.5.1",
@@ -31,6 +32,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/node": "^25.0.10",
+    "@types/nodemailer": "^7.0.9",
     "@types/pg": "^8.16.0",
     "prisma": "^7.3.0",
     "ts-node-dev": "^2.0.0",
